<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <include
            layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:background="@drawable/gradientbackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/profile"
                app:civ_border_color="#fff"
                app:civ_border_width="2dp"
                tools:ignore="MissingClass" />

            <TextView
                android:id="@+id/tv_namaProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/colorText"
                android:layout_below="@id/profile_image"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="30sp" />


            <LinearLayout
                android:id="@+id/phone"
                android:layout_below="@id/tv_namaProfile"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="90dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:src="@drawable/ic_phone_android_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phoneNumber"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/phone"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:src="@drawable/ic_email_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/myEmail"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>