<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_signUp"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="341dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:hint="Your name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="Your e-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="Your username"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintVertical_bias="0.017"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="Your password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/txtRegister"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorGray"
        android:text="@string/txtLogin"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>